--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://github.com/AhmedErrahmani/onyxia-services-helm-charts">
+  </head>
+  <body>
+    <p>Redirecting to repository...</p>
+  </body>
+</html>
 
